CHANGELOG for Disqus for Drupal 7

Disqus 7.x-1.x-dev
=================================
- #2144035 by slashrsm | destinationsound: A "Configure block" link shows to anonymous users.

Disqus 7.x-1.10
=================================
- #1783636 by nunoveloso: Fix typos in hook_variable_info().
- #2111397 by slashrsm | joco: Cache disqus_comments block per-user if using SSO.
- #2109505 by tkngdwn: Added Official Disqus PHP API Support.
- #2114647 by Grayside: Added Decompose disqus_element_post_render() into more manageable API functions.
- #1537548 by Owen Barton, Grayside | kevinwalsh: Added Altering user data passed to Disqus SSO.
- #1783636 by jeroen12345: Added Implement hook_variable_info() in order to allow variable disqus_domain() (shortname) to be translated.
- #2083329 by slashrsm, thedavidmeister | dianikol: The link to get api key is lead to a 404 page.
- #2021905 by tkngdwn: Record file usage for SSO logo.
- #2040057 by mandar.harkare, RobLoach | steven.wichers: Hook_uninstall() removes variables not belonging to Disqus.
- #2021905 by Grayside, pblissmt: Custom SSO logo admin.
- #2017385 by marcingy: Fixed Disqus creates a notice when no domain is defined.
- #969202 by geerlingguy, aaronbauman, alias.mac, pcavanaugh, nadavoid, dashohoxha | animelion: Fixed Respect protocol of the page request.